samples/_failures_safe/1761207710_ba1bf0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c2970369.c: In function ‘main’:
./samples/SAFE/__tmp_c2970369.c:146:15: error: expected ‘)’ at end of input
  146 |     if (choice
      |        ~      ^
      |               )
./samples/SAFE/__tmp_c2970369.c:146:5: error: expected declaration or statement at end of input
  146 |     if (choice
      |     ^~
